deploy on gh pages

--- a/create-account/package.json
+++ b/create-account/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mahdigharibzadeh7.github.io/React-Projects/create-account",
+  "homepage": "https://mahdigharibzadeh7.github.io/create-account",
   "name": "create-account",
   "version": "0.1.0",
   "private": true,
